add serve script

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://volligohne.de",
   "scripts": {
     "start": "gatsby develop",
+    "serve": "gatsby serve",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
