--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "next",
+    "gatsby": "^2.0.0-beta.17",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.3",
     "gatsby-plugin-sharp": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
+    "gatsby-remark-prismjs": "^3.0.0-beta.3",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-smartypants": "next",
     "gatsby-source-filesystem": "next",
@@ -21,15 +21,15 @@
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
     "prismjs": "^1.15.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.12.0"
+    "eslint-plugin-react": "^7.10.0",
+    "gh-pages": "^1.2.0",
+    "prettier": "^1.13.7"
   },
   "homepage": "https://volligohne.de",
   "scripts": {
