--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vo-website-2",
-  "description": "Vollig Ohne",
+  "description": "völlig ohne",
   "version": "0.1.0",
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
