--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.0.0-beta.17",
+    "gatsby": "next",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.3",
+    "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sharp": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "^3.0.0-beta.3",
+    "gatsby-remark-prismjs": "next",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-smartypants": "next",
     "gatsby-source-filesystem": "next",
