--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "next",
-    "gatsby-plugin-feed": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-remark-copy-linked-files": "next",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-responsive-iframe": "next",
-    "gatsby-remark-smartypants": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby": "^2.0.0-beta.21",
+    "gatsby-plugin-feed": "^2.0.0-beta.3",
+    "gatsby-plugin-google-analytics": "^2.0.0-beta.2",
+    "gatsby-plugin-offline": "^2.0.0-beta.3",
+    "gatsby-plugin-react-helmet": "^3.0.0-beta.3",
+    "gatsby-plugin-sharp": "^2.0.0-beta.3",
+    "gatsby-remark-copy-linked-files": "^2.0.0-beta.2",
+    "gatsby-remark-images": "^2.0.1-beta.4",
+    "gatsby-remark-prismjs": "^3.0.0-beta.3",
+    "gatsby-remark-responsive-iframe": "^2.0.0-beta.2",
+    "gatsby-remark-smartypants": "^2.0.0-beta.2",
+    "gatsby-source-filesystem": "^2.0.1-beta.3",
+    "gatsby-transformer-remark": "^2.1.1-beta.2",
+    "gatsby-transformer-sharp": "^2.1.1-beta.3",
     "lodash": "^4.17.5",
+    "opentracing": "^0.14.3",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
