--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "next",
+    "gatsby": "^2.0.0-beta.32",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sharp": "^2.0.0-beta.5",
     "gatsby-remark-copy-linked-files": "next",
-    "gatsby-remark-images": "next",
+    "gatsby-remark-images": "^2.0.1-beta.6",
     "gatsby-remark-prismjs": "next",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-smartypants": "next",
     "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-remark": "^2.1.1-beta.3",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
     "prismjs": "^1.15.0",
