--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.0.0-beta.21",
     "gatsby-plugin-feed": "^2.0.0-beta.3",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.2",
+    "gatsby-plugin-less": "^2.0.0-beta.4",
     "gatsby-plugin-offline": "^2.0.0-beta.3",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.3",
     "gatsby-plugin-sharp": "^2.0.0-beta.3",
@@ -19,6 +20,7 @@
     "gatsby-source-filesystem": "^2.0.1-beta.3",
     "gatsby-transformer-remark": "^2.1.1-beta.2",
     "gatsby-transformer-sharp": "^2.1.1-beta.3",
+    "less": "^3.7.1",
     "lodash": "^4.17.5",
     "opentracing": "^0.14.3",
     "prismjs": "^1.15.0",
