--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^2.0.0-beta.110",
+    "gatsby-image": "^2.0.0-beta.8",
     "gatsby-plugin-feed": "^2.0.0-beta.4",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.5",
     "gatsby-plugin-less": "^2.0.0-beta.5",
