--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "author": "Timur Celikel <timur@volligohne.de>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.0.0-beta.110",
-    "gatsby-image": "^2.0.0-beta.8",
-    "gatsby-plugin-feed": "^2.0.0-beta.4",
-    "gatsby-plugin-google-analytics": "^2.0.0-beta.5",
-    "gatsby-plugin-less": "^2.0.0-beta.5",
-    "gatsby-plugin-offline": "^2.0.0-beta.9",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.4",
-    "gatsby-plugin-sharp": "^2.0.0-beta.9",
-    "gatsby-remark-copy-linked-files": "^2.0.0-beta.3",
-    "gatsby-remark-images": "^2.0.1-beta.11",
-    "gatsby-remark-prismjs": "^3.0.0-beta.7",
-    "gatsby-remark-responsive-iframe": "^2.0.0-beta.3",
-    "gatsby-remark-smartypants": "^2.0.0-beta.3",
-    "gatsby-source-filesystem": "^2.0.1-beta.10",
-    "gatsby-transformer-remark": "^2.1.1-beta.6",
-    "gatsby-transformer-sharp": "^2.1.1-beta.7",
+    "gatsby": "^2.0.0-rc.0",
+    "gatsby-image": "^2.0.0-rc.0",
+    "gatsby-plugin-feed": "^2.0.0-rc.0",
+    "gatsby-plugin-google-analytics": "^2.0.0-rc.0",
+    "gatsby-plugin-less": "^2.0.0-rc.0",
+    "gatsby-plugin-offline": "^2.0.0-rc.0",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.0",
+    "gatsby-plugin-sharp": "^2.0.0-rc.0",
+    "gatsby-remark-copy-linked-files": "^2.0.0-rc.0",
+    "gatsby-remark-images": "^2.0.1-rc.0",
+    "gatsby-remark-prismjs": "^3.0.0-rc.0",
+    "gatsby-remark-responsive-iframe": "^2.0.0-rc.0",
+    "gatsby-remark-smartypants": "^2.0.0-rc.0",
+    "gatsby-source-filesystem": "^2.0.1-rc.0",
+    "gatsby-transformer-remark": "^2.1.1-rc.0",
+    "gatsby-transformer-sharp": "^2.1.1-rc.0",
     "less": "^3.8.1",
     "lodash": "^4.17.5",
     "opentracing": "^0.14.3",
