--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.0.0-rc.0",
     "gatsby-plugin-feed": "^2.0.0-rc.0",
     "gatsby-plugin-google-analytics": "^2.0.0-rc.0",
+    "gatsby-plugin-layout": "^1.0.0-rc.0",
     "gatsby-plugin-less": "^2.0.0-rc.0",
     "gatsby-plugin-offline": "^2.0.0-rc.0",
     "gatsby-plugin-react-helmet": "^3.0.0-rc.0",
