--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-layout": "^1.0.3",
     "gatsby-plugin-less": "^2.0.5",
+    "gatsby-plugin-matomo": "^0.5.0",
     "gatsby-plugin-offline": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
