--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,6 +1,7 @@
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript
 
-Redirect 301 /projekte/ /
+RewriteCond %{REQUEST_URI} ^/projekte[/]?$
+RewriteRule (.*) / [R=301,L]
 
 RewriteEngine On
 RewriteCond %{HTTP_HOST} !=volligohne.de
