--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lodash": "^4.17.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "svg-inline-loader": "^0.8.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
