--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://volligohne.de",
   "scripts": {
     "start": "gatsby develop",
+    "clean": "gatsby clean",
     "dev-m": "gatsby develop -H 192.168.178.20 -p 8000",
     "serve": "gatsby serve",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
